# eos

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yml  test.yml  update_tz_data.yaml  update_tz_data.yml
eos-format-spec-macro/: Cargo.toml
eos-format-spec-macro/src/: lib.rs
eos-tz/: Cargo.toml  README.md
eos-tz/examples/: basic.rs  bundled.rs  localtime.rs
eos-tz/src/: error.rs  lib.rs  local.rs  posix.rs  reader.rs  timestamp.rs  timezone.rs  transitions.rs
eos-tz/src/sys/localtime/: mod.rs  unix.rs  windows.rs
eos-tz/tests/: timezone.rs
eos-tzdata/: Cargo.toml  README.md  update.py
eos-tzdata/src/: data.rs  lib.rs
examples/: formatting.rs  local_time.rs  system_time.rs  utc_now.rs
src/: builder.rs  date.rs  datetime.rs  error.rs  ext.rs  fmt.rs  gregorian.rs  interval.rs  isoformat.rs  iter.rs  lib.rs  macros.rs  serde.rs  step.rs  time.rs  timestamp.rs  timezone.rs  unit.rs  utils.rs
src/extra/: mod.rs  rusqlite.rs
src/sys/: mod.rs
src/sys/localtime/: mod.rs  unix.rs  windows.rs
src/sys/systemtime/: mod.rs  unix.rs  windows.rs
tests/: fmt.rs  interval.rs  isoformat.rs  timezone.rs  timezone_conversion.rs
