[package]
name = "eos"
version = "0.1.0"
edition = "2021"
authors = ["Rapptz"]
rust-version = "1.57"
description = "A simple and easy to use datetime library for Rust"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Rapptz/eos"
keywords = ["date", "time"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc", "std"]
std = ["alloc"]
alloc = []

[dependencies]
