[package]
name = "eos"
version = "0.1.0"
edition = "2021"
authors = ["Rapptz"]
rust-version = "1.57"
description = "A simple and easy to use datetime library for Rust"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Rapptz/eos"
keywords = ["date", "time"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc", "std", "macros", "localtime"]
std = ["alloc"]
alloc = []
macros = []
localtime = ["libc"]

[dependencies]

[target.'cfg(target_family = "unix")'.dependencies]
libc = { version = "0.2", optional = true }
