[package]
name = "eos"
version = "0.1.0"
edition = "2021"
authors = ["Rapptz"]
rust-version = "1.57"
description = "A simple and easy to use datetime library for Rust"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Rapptz/eos"
documentation = "https://docs.rs/eos"
keywords = ["date", "time"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc", "std", "macros", "system", "formatting", "parsing"]
std = ["alloc"]
formatting = ["alloc"]
parsing = ["alloc"]
alloc = []
macros = ["eos-format-spec-macro"]
system = ["libc"]

[dependencies]
eos-format-spec-macro = { path = "eos-format-spec-macro", optional = true }
serde = { version = "1.0.136", default-features = false, optional = true }

[dev-dependencies]
serde_json = { version = "1" } # For testing Serde integration
serde_derive = { version = "1", default-features = false } # For testing Serde integration

[target.'cfg(target_family = "unix")'.dependencies]
libc = { version = "0.2", optional = true, default-features = false } # this could use the weak dep feature

[workspace]
members = [
    "eos-tz",
    "eos-tzdata",
    "eos-format-spec-macro",
]
