[package]
name = "eos-tzdata"
version = "1.2024.1"
edition = "2021"
authors = ["Rapptz"]
rust-version = "1.70"
description = "IANA timezone database data files for eos"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Rapptz/eos/tree/master/eos-tzdata"
documentation = "https://docs.rs/eos-tzdata"
keywords = ["date", "time", "timezone", "tzdb"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
